add simple homepage

--- a/cloud/dashboard/src/styles/index.scss
+++ b/cloud/dashboard/src/styles/index.scss
@@ -110,7 +110,7 @@ aside {
   -moz-osx-font-smoothing: grayscale;
 
   a {
-    color: #337ab7;
+    color: #1890ff;
     cursor: pointer;
 
     &:hover {
