--- a/serverless/dashboard/src/styles/variables.scss
+++ b/serverless/dashboard/src/styles/variables.scss
@@ -9,9 +9,9 @@ $yellow: #FEC171;
 $panGreen: #30B08F;
 
 // sidebar
-$menuText: rgba(2, 2, 2, 0.692);
-$menuActiveText: #1890ff;
-$subMenuActiveText: black; // https://github.com/ElemeFE/element/issues/12951
+$menuText: #4f5959;
+$menuActiveText: #4f5959;
+$subMenuActiveText: 4f5959; // https://github.com/ElemeFE/element/issues/12951
 
 $menuBg: white;
 $menuHover: rgba(211, 211, 211, 0.404);
